# autostereogram-rust

./: Cargo.toml  readme.md
src/: main.rs  sirds.rs  texture.rs
