[package]
name = "autostereogram-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.3"

[[bin]]
name = "texture"
path = "src/texture.rs"

[[bin]]
name = "sirds"
path = "src/sirds.rs"